--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <p>Less is more work</p>
         <div class="about-content">
           <div class="image">
-            <img src="/images/about.jpg" alt="About Image">
+            <img src="./images/about.jpg" alt="About Image">
           </div>
           <div class="text">
             <p>
